--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^9.1.12",
+    "@angular/cdk": "^10.2.1",
     "@angular/common": "^9.1.12",
     "@angular/compiler": "^9.1.12",
     "@angular/core": "^9.1.12",
     "@angular/forms": "^9.1.12",
+    "@angular/material": "^10.2.3",
     "@angular/platform-browser": "^9.1.12",
     "@angular/platform-browser-dynamic": "^9.1.12",
     "@angular/router": "^9.1.12",
@@ -40,9 +42,13 @@
     "@coreui/coreui": "^2.1.16",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "0.3.0",
+    "@nebular/auth": "^6.2.0",
+    "@nebular/eva-icons": "6.2.0",
+    "@nebular/theme": "^6.2.0",
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
+    "eva-icons": "^1.1.2",
     "flag-icon-css": "^3.5.0",
     "font-awesome": "^4.7.0",
     "moment": "^2.27.0",
@@ -62,6 +68,7 @@
     "@angular/cli": "^9.1.12",
     "@angular/compiler-cli": "^9.1.12",
     "@angular/language-service": "^9.1.12",
+    "@schematics/angular": "^9.1.12",
     "@types/jasmine": "^3.5.12",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^13.13.14",
